# uv-windows-docker

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yaml  publish.yaml
docker/: Dockerfile.server  Dockerfile.servercore
test/: Dockerfile  pyproject.toml  test.py
